Change Base64 generator to Apache Codec